--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,9 @@
-<h1 class="mt-4">Dashboard</h1>
-<p class="lead mb-3">Welcome <%= user.name %></p>
-<a href="/users/logout" class="btn btn-secondary">Logout</a>
+<div class="container mt-8 p-3 text-center ">
+  <div class="card">
+    <div class="card-content mb-8 p-3">
+      <h1 class="mt-4">Dashboard</h1>
+      <p class="lead mb-3">Welcome <%= user.name %></p>
+      <a href="/users/logout" class="btn btn-secondary">Logout</a>
+    </div>
+  </div>
+</div>
